--- a/services/stats/web_stats.conf
+++ b/services/stats/web_stats.conf
@@ -2,15 +2,15 @@
 
         ServerName localhost
 
-        ProxyPass / http://localhost:5601/
+        DocumentRoot /var/www/web_stats
 
-        <Proxy *>
+        <Directory /var/www/web_stats>
             AllowOverride None
             AuthType Basic
-            AuthName "Kibana Authentification"
+            AuthName "Authentification"
             AuthUserFile /etc/apache2/htpasswd.users
             Require valid-user
-        </Proxy>
+        </Directory>
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
